# firstvir

typegame/: CMakeLists.txt  main.cpp  tg_apple_bottom_toolbar.cpp  tg_apple_bottom_toolbar.h  tg_apple_entity.cpp  tg_apple_entity.h  tg_apple_failure_dialog.cpp  tg_apple_failure_dialog.h  tg_apple_logic_orchestrator.cpp  tg_apple_logic_orchestrator.h  tg_apple_state_end.cpp  tg_apple_state_end.h  tg_apple_state_idle.cpp  tg_apple_state_idle.h  tg_apple_state_paused.cpp  tg_apple_state_paused.h  tg_apple_state_playing.cpp  tg_apple_state_playing.h  tg_apple_victory_dialog.cpp  tg_apple_victory_dialog.h  tg_audio_manager.cpp  tg_audio_manager.h  tg_bullet_entity.cpp  tg_bullet_entity.h  tg_common_types.h  tg_config_manager.cpp  tg_config_manager.h  tg_confirm_dialog.cpp  tg_confirm_dialog.h  tg_custom_button.cpp  tg_custom_button.h  tg_custom_progress_bar.cpp  tg_custom_progress_bar.h  tg_enemy_entity.cpp  tg_enemy_entity.h  tg_entity_base.h  tg_exit_dialog.cpp  tg_exit_dialog.h  tg_game_canvas.cpp  tg_game_canvas.h  (+25 more)
